<resources>
    <string name="app_name">Furniture Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="discover">Discover</string>
    <string name="cart">Cart</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="get_account">Create New Account</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_have_an_account">already have an account</string>
    <string name="signup">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="title">Title</string>
    <string name="description">Soft Material Sofa Stool</string>
    <string name="amount_placeholder">$ 40</string>
    <string name="personal_details">Personal Details</string>
    <string name="sign_out">sign out</string>
    <string name="jonh_doe">John Doe</string>
    <string name="palceholder_tel">+254 723 120 234</string>
    <string name="placeholder_email">person@gmail.com</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="track_orders">Track Orders</string>
    <string name="create_item">Create New Item</string>
    <string name="my_saved_items">My Saved Items</string>
    <string name="checkout">checkout</string>
    <string name="empty_cart">Clear Cart</string>
    <string name="view_more">View More</string>
    <string name="read_more">Read More</string>
    <string name="price_format">%s</string>
    <string name="total_format">Total cost: %s</string>
    <string name="quantity_format">No of Items: %d</string>
    <string name="complete_checkout">Complete Checkout</string>
    <string name="payment_method">"Select a Payment Method to Continue: "</string>
    <string name="mpesa">M-Pesa</string>
    <string name="debit_card">Debit Card</string>
    <string name="error_password">Password should be greater than 8 characters</string>
    <string name="error_email">Enter a valid email address</string>
    <string name="error_first_name">First name is required</string>
    <string name="error_last_name">Last name is required</string>
    <string name="error_phone">Phone is required</string>
    <string name="error_confirm_password">Passwords do not match</string>
    <string name="userprofile_info_format">%s</string>
    <string name="checkout_total">Total Cost is  Ksh.  %s</string>
    <string name="short_desc">Short Description</string>
    <string name="long_desc">Long Description</string>
    <string name="price">Unit Price</string>
    <string name="select_image">Select Image</string>
    <string name="error_price">Item price is required</string>
    <string name="long_desc_error">Item Long Description is required</string>
    <string name="short_desc_error">Item Short Description is required</string>
    <string name="title_error">Item title/name is required</string>
    <string name="image_error">Item image is required</string>
    <string name="select_delivery_location">Select Delivery Location</string>
    <string name="update_order_status">update order status</string>
    <string name="order_item_id">ORDER ID:    \t\t%s</string>
    <string name="order_item_total_format">ORDER TOTAL COST:    \t\t%s</string>
    <string name="order_item_location_format">DELIVERY LOCATION: \t\tSee Map</string>
    <string name="order_item_status_format">ORDER STATUS:    \t\t%s</string>
    <string name="order_item_user_name_format">NAME:    \t\t%s    %s</string>
    <string name="order_item_phone_format">PHONE NUMBER:    \t\t+%s</string>
    <string name="order_item_email_format">EMAIL:    \t\t%s</string>
    <string name="user_details">User Details</string>
    <string name="order_details">Order Details</string>
    <string name="ordered_items">Ordered Items</string>
    <string name="open_map">Open Map</string>
    <string name="dial_user">Dial User</string>


</resources>