<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.main.CheckoutFragment">

    <TextView
        android:id="@+id/payment_method_text_view"
        style="@style/Widget.FurnitureStore.ItemTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:gravity="start"
        android:text="@string/payment_method"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/payment_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checkedButton="@id/option_mpesa"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payment_method_text_view">

        <RadioButton
            android:id="@+id/option_mpesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mpesa" />

        <RadioButton
            android:id="@+id/option_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debit_card" />
    </RadioGroup>




    <TextView
        android:id="@+id/checkout_total_cost_text_view"
        style="@style/Widget.FurnitureStore.ItemTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/secondaryDarkColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/complete_checkout_button"
        tools:text="Ksh. 100,000" />




    <Button
        android:id="@+id/complete_checkout_button"
        style="@style/Widget.FurnitureStore.SecondaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/complete_checkout"
        app:icon="@drawable/ic_check"
        app:iconGravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>